--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import "https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700";
 html{height:100%}
-body{font-size:16px;background:#fff;color:#000;overflow-x:hidden;font-family:'Open Sans',sans-serif,Arial,Helvetica;font-weight:400;position:relative;}
+body{font-size:16px;background:#fff;color:#000;overflow-x:hidden;font-family:'Open Sans',sans-serif,Arial,Helvetica;font-weight:400;position:relative;line-height: 28px;}
 img{max-width:100%}
 p{margin-bottom:.5rem}
 a{text-decoration:none;transition:.3s;-webkit-transition:.3s;-moz-transition:.3s;color:#000}
@@ -117,7 +117,7 @@ img.logo-white {width: 180px;}
 .volt-sidenav .expand-mob-dd{width:44px;height:44px;position:absolute;top:0;right:20px}
 .volt-sidenav .closebtn{position:absolute;top:0;right:0;font-size:2rem;width:40px;height:40px;border:0;display:inline-block;text-align:center;color:#fff;background:#777;padding:.5rem;line-height:.8}
 .volt-sidenav .closebtn:hover,.volt-sidenav .closebtn:focus{color:#000;background:#f2f2f2}
-.volt-footer{background:#a8e8ea;color:#404040;padding:2rem 0}
+.volt-footer{background:#e0e1e1;color:#404040;padding:2rem 0}
 .volt-footer a{color:#404040;display:inline-block}
 .volt-footer a:hover,.volt-footer a:focus{color:#777}
 .volt-footer .footer-links{margin-bottom:1rem;font-size:.9375rem}
@@ -301,7 +301,7 @@ img.logo-white {width: 180px;}
 .mettleHeading{font-size:2.5rem;font-weight:600;color:#777;text-align:center}
 .csrHeading {font-size:1.2rem;font-weight:400;color:#000;text-align:left; font-family: 'Open Sans',sans-serif,Arial,Helvetica; padding:0 0 1rem 0;}
 .visionList_box{overflow:hidden;display:block;margin-bottom:30px;background-color: #fff;
-   box-shadow: 0px 10px 15px 7px rgba(0, 0, 0, 0.16);
+   /* box-shadow: 0px 10px 15px 7px rgba(0, 0, 0, 0.16); */
     transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
     padding: 10px;}
 .visionList_box .visionListimg{
@@ -638,14 +638,14 @@ pointer-events: none;
 	font-size: 16px;
 	font-weight: 600;
 	display: block;
-	padding: 5px 15px;
+	padding: 12px 15px;
 	border-radius: 5px;
-	border-left: 2px solid #9ec5fa;
-	background-color: #ffffff;
+	border: 1px solid #9ec5fa;
+	/* background-color: #ffffff; */
 	-webkit-box-shadow: -1px 3px 20px 0px rgb(82, 90, 101, 0.1);
-	box-shadow: -1px 3px 20px 0px rgb(82, 90, 101, 0.1);
-	box-shadow: 0px 10px 15px 7px rgba(0, 0, 0, 0.16);
-    transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
+	/* box-shadow: -1px 3px 20px 0px rgb(82, 90, 101, 0.1); */
+	/* box-shadow: 0px 10px 15px 7px rgba(0, 0, 0, 0.16); */
+    /* transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s; */
 	-webkit-transition: 0.4s;
 	transition: 0.4s;
 }
@@ -659,13 +659,13 @@ pointer-events: none;
 	width: 0;
 	height: 100%;
 	border-radius: 5px;
-	background-color: #9ec5fa;
+	background-color: transparent;
 	-webkit-transition: 0.4s;
 	transition: 0.4s;
 }
 
 .overview-content .features-list li span:hover {
-	color: #ffffff;
+	color: #404040;
 }
 
 .overview-content .features-list li span:hover::before {
@@ -684,8 +684,8 @@ pointer-events: none;
 .enquiry-schedule button {
     background-color: #73cee7;
         border: 1px solid #9ec5fa;
-		box-shadow: 0px 10px 15px 7px rgba(0, 0, 0, 0.16);
-    transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
+		/* box-shadow: 0px 10px 15px 7px rgba(0, 0, 0, 0.16); */
+    /* transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s; */
     /* width: 170px; */
     padding: 10px 20px;
     font-size: 16px;
@@ -693,12 +693,13 @@ pointer-events: none;
     border-radius: 10px;
     margin: 0px 5px;
     cursor: pointer;
+
 }
 .enquiry-schedule button {
     background-color: #73cee7;
      border: 1px solid #9ec5fa;
-	 box-shadow: 0px 10px 15px 7px rgba(0, 0, 0, 0.16);
-    transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
+	 /* box-shadow: 0px 10px 15px 7px rgba(0, 0, 0, 0.16); */
+    /* transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s; */
     /* width: 170px; */
     padding: 10px 20px;
     font-size: 16px;
@@ -706,4 +707,5 @@ pointer-events: none;
     border-radius: 10px;
     margin: 0px 5px;
     cursor: pointer;
+	
 }
