--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ li{list-style:none}
 .volt-wrapper{overflow-x:hidden}
 .volt-innner .volt-wrapper{padding-top:70px;overflow:hidden}
 header{position:fixed;top:0;left:0;width:100%;z-index:10}
-.volt-header{background:#a8e8ea;padding:0.5rem 0;transition:.4s;-webkit-transition:.4s;-moz-transition:.4s}
+.volt-header{background:#a8e8ea;padding:1.3rem 0;transition:.4s;-webkit-transition:.4s;-moz-transition:.4s}
 .volt-header .volt-logo{width:100%;transition:.2s;-webkit-transition:.2s;-moz-transition:.2s}
 img.logo-white {width: 180px;}
 .volt-header .volt-logo .logo-inverse{display:none}
@@ -300,18 +300,13 @@ img.logo-white {width: 180px;}
 .visionInfo{padding:5rem 0}
 .mettleHeading{font-size:2.5rem;font-weight:600;color:#777;text-align:center}
 .csrHeading {font-size:1.2rem;font-weight:400;color:#000;text-align:left; font-family: 'Open Sans',sans-serif,Arial,Helvetica; padding:0 0 1rem 0;}
-.visionList_box{overflow:hidden;display:block;margin-bottom:30px;background-color: #fff;
-   /* box-shadow: 0px 10px 15px 7px rgba(0, 0, 0, 0.16); */
-    transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
+.visionList_box{overflow:hidden;display:block;margin-bottom:30px;background-color: #fff;/* box-shadow: 0px 10px 15px 7px rgba(0, 0, 0, 0.16); */transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
     padding: 10px;}
-.visionList_box .visionListimg{
-	/* float:left;
-	clear:both; */
-	/* display:block; */
-	height:130px;line-height:60px;
-	margin:5px auto;
-	width:130px}
-.visionList_box h3{font-size:1.1rem;font-weight:600}
+.visionList_box .visionListimg{/* float:left;clear:both; *//* display:block; */height:130px;line-height:60px;margin:5px auto;width:130px}
+	.visionList_box:hover {/* z-index: 1; *//* position: relative; */box-shadow: 0 2px 71px rgba(0,0,0,.47);-webkit-animation-duration: 1s;animation-duration: 1s;transition: .5s;}
+	.visionList_box h3 {font-size: 28px;font-weight: 700;text-decoration: none;
+    font-family: GothamBlack;margin-bottom: 15px;}
+/* .visionList_box h3{font-size:1.1rem;font-weight:600} */
 .nameandInfo h3{    font-size: 1.2rem;color: #777;font-weight: 600;margin: 1.5rem 0 1rem;text-align: center;}
 .leadInfoTop{padding:5rem 3rem 3rem;max-width:1570px;margin:0 auto}
 .certification-slider h5{font-size:1.6875rem;font-weight:700}
@@ -598,11 +593,23 @@ pointer-events: none;
 	padding: 100px 0;
 }
 .overview-content h2 {
-	color: #404040;
-	font-size: 38px;
-	margin: 8px 0 15px 0;
+	color: #333;
+    font-size: 34px;
+    margin: 8px 0 15px 0;
+    font-family: GothamBlack;
+    /* text-transform: uppercase; */
+    font-weight: 600;
+    line-height: 1.1;
 }
-
+.volt-heading h2 {
+    color: #333;
+    font-size: 34px;
+    margin: 8px 0 15px 0;
+    font-family: GothamBlack;
+    /* text-transform: uppercase; */
+    font-weight: 600;
+    line-height: 1.1;
+}
 .overview-content p {
 	margin: 0 0 0 0;
 }
@@ -708,4 +715,44 @@ pointer-events: none;
     margin: 0px 5px;
     cursor: pointer;
 	
+}
+.read-more-link::after{
+	content: "\f054";
+    font: normal normal normal 14px/1 FontAwesome;
+    color: #d63293;
+    padding-left: 10px;
+}
+
+.btn__brand-color-voilet {
+    cursor: pointer;
+    position: relative;
+    padding: 10px 20px;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 400;
+    color: #fff!important;
+    border-radius: 18px;
+    background-color: #256ea9;
+}
+.btn__brand-color-voilet:hover {
+    color: #333!important;
+    background-color: #fff;
+}
+
+.btn, .comment-form input[type=submit], .search-form .search-submit {
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: 0.5rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.25;
+    border-radius: 0.25rem;
+    transition: all .15s ease-in-out;
 }
